<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >
        
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="204dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textoNomeBebida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNome"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/inputNomeBebida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textoNomeBebida"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textoDescBebida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/inputNomeBebida"
        android:text="@string/txtDesc"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/inputDescBebida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textoDescBebida"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btCadBebida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/btSubmit" />

</RelativeLayout>

</ScrollView>